--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -76,4 +76,78 @@
   margin-top: -4em;
 }
 
+.gn [sxt-main-viewer] {
+  @tmp-max-height: 200px;
+  .layers .sxt-layertree {
+    min-height: @tmp-max-height;
+    max-height: calc(@tmp-max-height + @tmp-max-height);
+  }
+  .layers-tools-expanded .sxt-layertree {
+    height: @tmp-max-height;
+  }
+  .sxt-maximize-layer-tools {
+    .sxt-layers-tabset {
+      height: @tmp-max-height + @tmp-max-height;
+    }
+  }
+}
+
+@media (max-height: 866px) {
+  .gn [sxt-main-viewer] {
+    @tmp-max-height: 150px;
+    .sxt-layers-tabset {
+      height: @tmp-max-height;
+    }
+    .layers .sxt-layertree {
+      min-height: @tmp-max-height;
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
+    .layers-tools-expanded .sxt-layertree {
+      height: @tmp-max-height;
+    }
+    .sxt-maximize-layer-tools .sxt-layers-tabset {
+      height: @tmp-max-height + @tmp-max-height;
+    }
+  }
+}
+
+@media (max-height: 766px) {
+  .gn [sxt-main-viewer] {
+    @tmp-max-height: 100px;
+    .sxt-layers-tabset {
+      height: @tmp-max-height;
+    }
+    .layers .sxt-layertree {
+      min-height: @tmp-max-height;
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
+    .layers-tools-expanded .sxt-layertree {
+      height: @tmp-max-height;
+    }
+    .sxt-maximize-layer-tools .sxt-layers-tabset {
+      height: @tmp-max-height + @tmp-max-height;
+    }
+  }
+}
+
+@media (max-height: 666px) {
+  .gn [sxt-main-viewer] {
+    @tmp-max-height: 50px;
+    .sxt-layers-tabset {
+      height: @tmp-max-height;
+    }
+    .layers .sxt-layertree {
+      min-height: @tmp-max-height;
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
+    .layers-tools-expanded .sxt-layertree {
+      height: @tmp-max-height;
+    }
+    .sxt-maximize-layer-tools .sxt-layers-tabset {
+      height: @tmp-max-height + @tmp-max-height;
+    }
+  }
+}
+
+
 @import 'gn_popover.less';
